# serializer version: 1
# name: test_file_returns_global_metadata_1
  '''
  ###
      Filename: hello.md
      Commits:
  First commit
  -Second commit
  '''
# ---
# name: test_file_returns_global_metadata_2
  '''
  ###
      Filename: hello.md
      Commits:
  unrelated commit
  '''
# ---
